apply minmax on the first column to ensure that the element doesn't become too small for the sidebar text

--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -13,7 +13,7 @@ body, html {
   padding: 16px;
   box-sizing: border-box;
   display: grid;
-  grid-template: 1fr 1fr 5fr 1fr / 1fr 3fr;
+  grid-template: 1fr 1fr 5fr 1fr / minmax(150px, 1fr) 3fr;
   grid-template-areas: 
     'header header '
     'sidebar nav '
